--- a/ihp/submissions/templates/submissions/main_base_bootstrap.html
+++ b/ihp/submissions/templates/submissions/main_base_bootstrap.html
@@ -9,6 +9,8 @@
     <script type='text/javascript' src='{{ MEDIA_URL }}js/bootstrap.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/bootstrap-popover.js'></script>
     <script type='text/javascript' src='{{ MEDIA_URL }}js/loader.js'></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/highcharts.js"></script> 
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/exporting.js"></script> 
 
     <style>
         .loader path {
