--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -186,6 +186,7 @@
                                 <li><a href="{% url hss_graphs "English" %}">HSS Graphs</a></li>
                                 <li><a href="{% url country_response_breakdown %}">Response Breakdown</a></li>
                                 <li><a href="{% url top5_countries %}">Top5 Countries</a></li>
+                                <li><a href="{% url early_signatories %}">Early Signatories</a></li>
                             </ul>
                         </p>
                     </div>
