Added old country graphs

--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -183,10 +183,12 @@
                                 <li><a href="{% url country_table "English" %}">Country Table</a></li>
                                 <li><a href="{% url country_matrix "English" %}">Country Table without Figures</a></li>
                                 <!--<li><a href="{% url government_graphs "English" %}">Government Graphs (<a href="{% url government_graphs "French" %}">French</a>)</li>-->
-                                <li><a href="{% url hss_graphs "English" %}">HSS Graphs</a></li>
+                                <li><a href="{% url hss_graphs %}">HSS Graphs</a></li>
                                 <li><a href="{% url country_response_breakdown %}">Response Breakdown</a></li>
                                 <li><a href="{% url top5_countries %}">Top5 Countries</a></li>
                                 <li><a href="{% url early_signatories %}">Early Signatories</a></li>
+                                <li><a href="{% url health_budget_graphs %}">Health Budgets</a></li>
+                                <li><a href="{% url budget_disbursement_graphs %}">Budget Disbursements</a></li>
                             </ul>
                         </p>
                     </div>
