--- a/ihp/submissions/templates/submissions/hss_graphs.html
+++ b/ihp/submissions/templates/submissions/hss_graphs.html
@@ -1,7 +1,6 @@
 {% block head %}
     {{ block.super }}
-    <style>
-    </style>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/graph_utils.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -11,44 +10,6 @@
     <div id="container_funds" class="graph"></div>
 </div>
 <script>
-
-    build_graph = function(options) {
-        chart_559136 = new Highcharts.Chart({
-            series : [
-                {
-                    data : options.base_data,
-                    name : '2007 data'
-                },
-                {
-                    data : options.y2009_data,
-                    name : '2009 data'
-                },
-                {
-                    data : options.cur_data,
-                    name : '2011 data'
-                }
-            ],
-            yAxis : {
-                title : {
-                    text : options.yaxis
-                }
-            },
-            chart : {
-                renderTo : options.container,
-                type : 'column'
-            },
-            var_name : options.graph_name,
-            xAxis : {
-                categories : countries
-            },
-            title : {
-                text : options.title
-            },
-            legend : {
-                enabled : true
-            }
-        });
-    }
 
     var build_table = function(json) {
         loadStop();
