--- a/ihp/submissions/templates/submissions/hss_graphs.html
+++ b/ihp/submissions/templates/submissions/hss_graphs.html
@@ -20,7 +20,7 @@
             y2009_data : json.map(function(x) { return d3.round(x.phc_clincs["2009_val"], 2); }),
             cur_data : json.map(function(x) { return d3.round(x.phc_clincs["cur_val"], 2); }),
             yaxis : 'outpatient dept visits per 10,000 population',
-            title : 'Access to PHC Clinics',
+            title : 'Outpatient utilisation',
             container : 'container_phc',
             graph_name : 'chart_phc'
         
@@ -42,7 +42,7 @@
             y2009_data : json.map(function(x) { return d3.round(x.health_systems["2009_val"], 2); }),
             cur_data : json.map(function(x) { return d3.round(x.health_systems["cur_val"], 2); }),
             yaxis : 'USD spent on health workforce increasing',
-            title : 'Funds for Health Systems',
+            title : 'Funds for health workforce',
             container : 'container_funds',
             graph_name : 'chart_funds'
         
