tweaked home page a little

--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -25,6 +25,12 @@
         padding-right: 5px;
         border-right: solid thin white;
     }
+
+    .language {
+        font-size: 11px;
+        padding-left: 4px;
+        padding-right: 4px;
+    }
 </style>
 {% endblock head %}
 
@@ -47,8 +53,10 @@
                             <div class="acblock">
                             <h3>{{ agency.agency }}</h3>
                             <ul>
-                                <li><a href="{% url agencygraphs agency.agency "English" %}">Graphs (English)</a></li> 
-                                <li><a href="{% url agencygraphs agency.agency "French" %}">Graphs (French)</a></li> 
+                                <li>
+                                    <a href="{% url agencygraphs agency.agency "English" %}"><img src="{{ MEDIA_URL }}images/graph_icon.png"/><span class="language">(En)</span></a>
+                                    <a href="{% url agencygraphs agency.agency "French" %}"><img src="{{ MEDIA_URL }}images/graph_icon.png"/><span class="language">(Fr)</span></a>
+                                </li> 
                                 <li><a href="{% url agency_table_by_agency agency.id "English" %}">Table</a></li>
                             </ul>
                             </div>
@@ -62,8 +70,10 @@
                             <div class="acblock">
                             <h3>{{ country.country }}</h3>
                             <ul>
-                                <li><a href="{% url countrygraphs country.country "English" %}">Graphs (English)</a></li>
-                                <li><a href="{% url countrygraphs country.country "French" %}">Graphs (French)</a></li>
+                                <li>
+                                    <a href="{% url countrygraphs country.country "English" %}"><img src="{{ MEDIA_URL }}images/graph_icon.png"/><span class="language">(En)</span></a>
+                                    <a href="{% url countrygraphs country.country "French" %}"><img src="{{ MEDIA_URL }}images/graph_icon.png"/><span class="language">(Fr)</span></a>
+                                </li>
                                 <li><a href="{% url agency_table_by_country country.id "English" %}">Table</a></li>
                             </ul>
                             </div>
