--- a/ihp/submissions/templates/submissions/agency_overall_indicators.html
+++ b/ihp/submissions/templates/submissions/agency_overall_indicators.html
@@ -1,3 +1,5 @@
+{% load agencycountryindicators %}
+
 {% block head %}
     {{ block.super }}
     <script type="text/javascript" src="{{ MEDIA_URL }}js/graph_utils.js"></script>
@@ -11,28 +13,28 @@
 
     var build_table = function(json) {
         loadStop();
-        countries = json.map(function(x) { return x.country; });
+        indicators = json.map(function(x) { return x.indicator; });
+        console.log(json);
 
         build_graph({
-            base_data : json.map(function(x) { return d3.round(x.data["baseline"], 2); }),
-            y2009_data : json.map(function(x) { return d3.round(x.data["2009"], 2); }),
-            cur_data : json.map(function(x) { return d3.round(x.data["latest"], 2); }),
+            base_data : json.map(function(x) { return d3.round(x["baseline"], 2); }),
+            y2009_data : json.map(function(x) { return d3.round(x["2009"], 2); }),
+            cur_data : json.map(function(x) { return d3.round(x["latest"], 2); }),
             yaxis : '%',
-            title : 'Indicator: {{ params.indicator }}',
+            title : 'Agency: {{ params.agency_id|as_agency }}',
             container : 'container_hb',
             graph_name : 'chart_hb',
+            categories : indicators,
             target : '0',
             target_text : ''
         
         });
-        var tspans = d3.selectAll("tspan")[0][33]
-        d3.select(tspans).text("* Target for Nepal is 10%")
 
     }
     loadStart();
 
 
-    var json = '{% url json_country_by_indicator params.indicator %}';
+    var json = '{% url json_agency_all_indicators params.agency_id %}';
 
     d3.json(json, function(e){
         build_table(e);
