Fixed bug with graph_utils

--- a/ihp/submissions/templates/submissions/budget_disbursement.html
+++ b/ihp/submissions/templates/submissions/budget_disbursement.html
@@ -20,6 +20,7 @@
             yaxis : '%',
             title : '4G: Actual disbursement of government health budgets',
             container : 'container_hb',
+            categories : countries,
             graph_name : 'chart_hb'
         
         });
