--- a/ihp/submissions/templates/submissions/country_graphs_by_indicator.html
+++ b/ihp/submissions/templates/submissions/country_graphs_by_indicator.html
@@ -22,7 +22,8 @@
             container : 'container_hb',
             graph_name : 'chart_hb',
             target : '0',
-            target_text : ''
+            target_text : '',
+            categories : countries
         
         });
         var tspans = d3.selectAll("tspan")[0][33]
