--- a/ihp/submissions/templates/submissions/hss_graphs.html
+++ b/ihp/submissions/templates/submissions/hss_graphs.html
@@ -22,6 +22,7 @@
             yaxis : 'outpatient dept visits per 10,000 population',
             title : 'Outpatient utilisation',
             container : 'container_phc',
+            categories : countries,
             graph_name : 'chart_phc'
         
         });
@@ -33,6 +34,7 @@
             yaxis : 'Skilled medical personnel per 10,000 population',
             title : 'Availability of Health Workers',
             container : 'container_hw',
+            categories : countries,
             graph_name : 'chart_hw'
         
         });
@@ -44,6 +46,7 @@
             yaxis : 'USD spent on health workforce increasing',
             title : 'Funds for health workforce',
             container : 'container_funds',
+            categories : countries,
             graph_name : 'chart_funds'
         
         });
