--- a/ihp/submissions/templates/submissions/health_budget.html
+++ b/ihp/submissions/templates/submissions/health_budget.html
@@ -22,7 +22,8 @@
             container : 'container_hb',
             graph_name : 'chart_hb',
             target : '15',
-            target_text : 'Abuja Commitment'
+            target_text : 'Abuja Commitment',
+            categories : countries
         
         });
         var tspans = d3.selectAll("tspan")[0][33]
