--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -178,6 +178,7 @@
                                 <li><a href="{% url two_by_two_analysis %}">2x2 Analysis Tables</a></li>
                                 <li><a href="{% url fragile_states %}">Fragile States Tables</a></li>
                                 <li><a href="{% url volumes_by_country %}">Volume of Aid</a></li>
+                                <li><a href="{% url dfid_2dpa %}">DFID Table</a></li>
                             </ul>
                         </p>
                     </div>
