Added 2009 filter to overall barcharts

--- a/ihp/submissions/templates/submissions/agency_graphs_by_indicator.html
+++ b/ihp/submissions/templates/submissions/agency_graphs_by_indicator.html
@@ -24,7 +24,8 @@
 {% endif %}
 
 {% for graph in graphs %}
-    <div class="graphblock"><div id="{{ graph.name }}" class="graph"></div></div>
+    <div class="graphblock"><div id="{{ graph.name }}" class="graph"></div>
+</div>
 {% endfor %}
 
 {% endblock %}
