--- a/ihp/submissions/templates/submissions/country_matrix.html
+++ b/ihp/submissions/templates/submissions/country_matrix.html
@@ -7,7 +7,7 @@
 <table class="gov">
     <tr class="head">
         <th>SPM #</th>
-        <th>Standard Performance Measure</th>
+        <th class="spm">Standard Performance Measure</th>
         {% for country, _ in abs_values %}
         <th>{{ country }}</th>
         {% endfor %}
