Added Spanish to DP Summary edit page.

--- a/ihp/submissions/templates/submissions/dp_summary_edit.html
+++ b/ihp/submissions/templates/submissions/dp_summary_edit.html
@@ -41,6 +41,10 @@
             {{ form.erb1_French.label_tag }}
             {{ form.erb1_French }}
             </li>
+            <li>
+            {{ form.erb1_Spanish.label_tag }}
+            {{ form.erb1_Spanish }}
+            </li>
         </ol>
     </fieldset>
     <fieldset>
@@ -66,6 +70,10 @@
             {{ form.erb2_French.label_tag }}
             {{ form.erb2_French }}
             </li>
+            <li>
+            {{ form.erb2_Spanish.label_tag }}
+            {{ form.erb2_Spanish }}
+            </li>
         </ol>
     </fieldset>
     <fieldset>
@@ -83,6 +91,10 @@
             {{ form.erb3_French.label_tag }}
             {{ form.erb3_French }}
             </li>
+            <li>
+            {{ form.erb3_Spanish.label_tag }}
+            {{ form.erb3_Spanish }}
+            </li>
         </ol>
     </fieldset>
     <fieldset>
@@ -99,6 +111,10 @@
             <li>
             {{ form.erb4_French.label_tag }}
             {{ form.erb4_French }}
+            </li>
+            <li>
+            {{ form.erb4_Spanish.label_tag }}
+            {{ form.erb4_Spanish }}
             </li>
         </ol>
     </fieldset>
@@ -125,6 +141,10 @@
             {{ form.erb5_French.label_tag }}
             {{ form.erb5_French }}
             </li>
+            <li>
+            {{ form.erb5_Spanish.label_tag }}
+            {{ form.erb5_Spanish }}
+            </li>
         </ol>
     </fieldset>
     <fieldset>
@@ -141,6 +161,10 @@
             <li>
             {{ form.erb6_French.label_tag }}
             {{ form.erb6_French }}
+            </li>
+            <li>
+            {{ form.erb6_Spanish.label_tag }}
+            {{ form.erb6_Spanish }}
             </li>
         </ol>
     </fieldset>
@@ -159,6 +183,10 @@
             {{ form.erb7_French.label_tag }}
             {{ form.erb7_French }}
             </li>
+            <li>
+            {{ form.erb7_Spanish.label_tag }}
+            {{ form.erb7_Spanish }}
+            </li>
         </ol>
     </fieldset>
     <fieldset>
@@ -175,6 +203,10 @@
             <li>
             {{ form.erb8_French.label_tag }}
             {{ form.erb8_French }}
+            </li>
+            <li>
+            {{ form.erb8_Spanish.label_tag }}
+            {{ form.erb8_Spanish }}
             </li>
         </ol>
     </fieldset>
