Added submission summary view

--- a/ihp/submissions/templates/home.html
+++ b/ihp/submissions/templates/home.html
@@ -146,6 +146,13 @@
                                     <td></td>
                                     <td></td>
                                 </tr>
+                            </table><br/>
+                            <table>
+                                <tr>
+                                    <td><span class="indicatorblock"><a href="{% url agency_submissions_summary %}">Summary of Submissions by indicator</a></span></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
                             </table>
                         </p>
                         </div>
