Added bleeds and trimlines to country scorecard.

--- a/ihp/scorecards/templates/scorecards/gov.html
+++ b/ihp/scorecards/templates/scorecards/gov.html
@@ -23,7 +23,7 @@
 	    font-family: Calibri-Italic;
 	    src: url({{ MEDIA_URL }}fonts/calibri-italic.ttf);
 	}
-        svg, #figure { width:1800px; height:1325px;}
+        svg, #figure { width:1800px; height:1289px;}
         body{
             background-color:#fefefe;
             font-family:'Calibri';
@@ -95,7 +95,7 @@
 
     </style>
 </head>
-<body style="">
+<body style="margin: 0;">
     <div id="figure"></div> <br />
     <script type="text/javascript" src="{{ MEDIA_URL }}js/countryscorecard-d3.js" ></script>
 </body>
