--- a/ihp/scorecards/templates/scorecards/dp.html
+++ b/ihp/scorecards/templates/scorecards/dp.html
@@ -11,7 +11,7 @@
 	    src: url({{ MEDIA_URL }}fonts/calibri.ttf);
 	}
         /*svg, #figure { width:1495px ; height:2126px;}*/
-        svg, #figure { width:1505px; height:2125px;}
+        svg, #figure { width:1524px; height:2154px;}
 
         .additional-information {
             font-size:5px;
@@ -56,7 +56,7 @@
         }
     </style>
 </head>
-<body style="">
+<body style="margin: 0;">
     <div id="figure"></div>
     <script type="text/javascript">
     var pages = ['ihp-page-1.svg', 'ihp-page-2.svg'];
